fix slider on mobile

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -62,6 +62,8 @@
     }
   }
   &.bottom-sheet {
+    // Prevent refresh pages on swipe down
+    touch-action: none;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     margin-bottom: 0;
